// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`update-object tool targetType: comment should update a comment content 1`] = `
"# Comment Updated

**Comment ID:** 54321
**Thread ID:** 12345
**Channel ID:** 67890
**Last Edited:** 2025-02-03T12:34:56.000Z
**URL:** https://twist.com/a/11111/ch/67890/t/12345/c/54321

## Content

Updated comment content"
`;

exports[`update-object tool targetType: message should update a conversation message content 1`] = `
"# Message Updated

**Message ID:** 98765
**Conversation ID:** 33333
**Workspace ID:** 11111
**Last Edited:** 2025-02-03T12:34:56.000Z
**URL:** https://twist.com/a/11111/msg/33333/m/98765

## Content

Updated message content"
`;

exports[`update-object tool targetType: thread should update a thread title and content 1`] = `
"# Thread Updated

**Title:** Updated Title
**Thread ID:** 12345
**Channel ID:** 67890
**Last Edited:** 2025-02-03T12:34:56.000Z
**URL:** https://twist.com/a/11111/ch/67890/t/12345/

## Content

Updated content"
`;

exports[`update-object tool targetType: thread should update only the thread content 1`] = `
"# Thread Updated

**Title:** Test Thread
**Thread ID:** 12345
**Channel ID:** 67890
**URL:** https://twist.com/a/11111/ch/67890/t/12345/

## Content

New content only"
`;

exports[`update-object tool targetType: thread should update only the thread title 1`] = `
"# Thread Updated

**Title:** New Title Only
**Thread ID:** 12345
**Channel ID:** 67890
**URL:** https://twist.com/a/11111/ch/67890/t/12345/

## Content

Test thread content"
`;
